--- a/src/_includes/partials/components/filter-resources.njk
+++ b/src/_includes/partials/components/filter-resources.njk
@@ -1,4 +1,5 @@
 <div class="filter">
+    <h2>Filters</h2>
     {# Topic selections #}
     {% set filterIconId = "#topic" %}
     {% set filterTitle = "Topic" %}
