--- a/src/resourcesIndex.njk
+++ b/src/resourcesIndex.njk
@@ -7,6 +7,7 @@ permalink: resourceData.json
     {
       "title": {{ item.data.title | dump | safe }},
       "description": {{ item.data.description | dump | safe }},
+      "publishedYear": {% if item.data.publishedYear %} {{ item.data.publishedYear | dump | safe }} {% else %} "" {% endif %},
       "topics": [
         {%- for topic in item.data.topics -%}
         {{ topic | dump | safe }}{% if not loop.last %},{% endif %}
