--- a/src/_includes/partials/components/filter-resources-header.njk
+++ b/src/_includes/partials/components/filter-resources-header.njk
@@ -1,11 +1,9 @@
-<div class="filter-header">
+<button type="button" class="filter-expand-button" data-section="{{ filterType | replace(" ", "") }}" aria-expanded="true" aria-label="collapse the {{ filterType }} filter">
     <svg role="presentation"><use xlink:href="{{ filterIconId }}" /></svg>
     <div class="filter-title">
         <p>{{ filterTitle }}</p>
         <p class="filter-applied-number" id="{{ 'filter-' + filterType }}"></p>
     </div>
-    <button type="button" class="filter-expand-button" data-section="{{ filterType | replace(" ", "") }}" aria-expanded="true" aria-label="collapse the {{ filterType }} filter">
-        <svg class="icon-minus" data-section="{{ filterType | replace(" ", "") }}"><use xlink:href="#minus" /></svg>
-        <svg class="icon-plus" data-section="{{ filterType | replace(" ", "") }}"><use xlink:href="#plus" /></svg>
-    </button>
-</div>
+    <svg class="icon-minus" role="presentation"><use xlink:href="#minus" /></svg>
+    <svg class="icon-plus" role="presentation"><use xlink:href="#plus" /></svg>
+</button>
