--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -42,62 +42,8 @@
             </form>
 
             <div class="content">
-                <h2>Search results</h2>
-                <div class="resources-applied-filters">
-                </div>
-                <h2 class="visually-hidden">Resources</h2>
-                <div class="resources-result">
-                    <div class="resources-applied-filters">
-                        <h3>Applied filters</h3>
-                        <div class="filter-tags">
-                            <div class="filter-tag">
-                                <svg role="presentation"><use xlink:href="#topic" /></svg>
-                                <p>topic</p>
-                            </div>
-                            <div class="filter-clear-all">
-                                <button>Clear all filters</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="resources-filtered-number">
-                        <p>Showing 10 results</p>
-                    </div>
-                    {% for i in range(0, 10) %}
-                        <div class="card">
-                            <div class="card-detail">
-                                <h3 class="card-title">
-                                    example title
-                                </h3>
-                                <div class="card-tags">
-                                    {% for i in range(0, 2) %}
-                                    <div class="card-tag">
-                                        <svg role="presentation"><use xlink:href="#topic" /></svg>
-                                        <p>topic</p>
-                                    </div>
-                                    {% endfor %}
-                                    {% for i in range(0, 2) %}
-                                    <div class="card-tag">
-                                        <svg role="presentation"><use xlink:href="#type" /></svg>
-                                        <p>type</p>
-                                    </div>
-                                    {% endfor %}
-                                </div>
-                                <div class="card-description">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                                <div class="card-publishedYear">
-                                    <p>
-                                        Published in 2023
-                                    </p>
-                                </div>
-                                <div class="card-link"><a rel="external" href="#">Visit resource</a></div>
-                            </div>
-                            <div class="card-image"></div>
-                        </div>
-                    {% endfor %}
-                </div>
+                {# content of this block is generated from renderSearchResults and renderResources methods in resources-utils, #}
+                {# two methods are called from resources-dynamic-handler.js #}
             </div>
         </div>
 
