--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -1,3 +1,8 @@
+// -----------------------------------------------------------------------------
+// This file contains styles for resources page.
+// There are some usages of !important, which are used to override UIO rules.
+// -----------------------------------------------------------------------------
+
 .page--resources {
   .content {
     flex: 0 0 90%;
