--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -34,7 +34,7 @@
                             {{ project.data.description | markdown | safe }}
                             {% endif %}
                             {% if project.data.link %}
-                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.title }} website</a></p>
+                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.projectName }} website</a></p>
                             {% endif %}
                         </article>
                         {% endfor %}
