fix: Update projects listing to use project name (resolves #539) (#541)
* update projects page to use project name, instead of body title

* update based on PR feedback

--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -26,15 +26,15 @@
                             {% else %}
                             <img class="thumbnail" src="/assets/images/project-placeholder.svg" role="presentation" alt="" />
                             {% endif %}
-                            <h3>{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
+                            <h3>{{ project.data.projectName }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
                             {% if project.data.content %}
-                            {% set fullDescription = project.data.description + " [More about " + project.data.title + "](" + project.url + ")" %}
+                            {% set fullDescription = project.data.description + " [More about " + project.data.projectName + "](" + project.url + ")" %}
                             {{ fullDescription | markdown | safe }}
                             {% else %}
                             {{ project.data.description | markdown | safe }}
                             {% endif %}
                             {% if project.data.link %}
-                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.title }} website</a></p>
+                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.projectName }} website</a></p>
                             {% endif %}
                         </article>
                         {% endfor %}
